# zone-tools

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  nightly.yml  release.yml
src/: client_context.cpp  client_context.h  json2zone.cpp  main.cpp  main_window.cpp  main_window.h  path_resolve.h  properties_panel.cpp  properties_panel.h  zone2json.cpp  zone_document.cpp  zone_document.h  zone_list_panel.cpp  zone_list_panel.h  zone_tree_model.cpp  zone_tree_model.h  zone_undo_commands.cpp  zone_undo_commands.h
tests/: test_zone_editor.cpp
